# meroalpha_terminal

./: API.md  Cargo.toml  My Shares Values-2.csv  README.md  openapi.json
design/: DESIGN.md  code.html
docs/superpowers/plans/: 2026-06-18-portfolio-page-mvp.md
src/: app.rs  db.rs  lib.rs  main.rs  meroalpha_api.rs  overview.rs  portfolio.rs
src/components/: empty_state.rs  holdings_table.rs  kpi_cards.rs  mod.rs  overview.rs  right_rail.rs  sidebar.rs  theme.rs  top_bar.rs
